---
source: tests/std140.rs
expression: "<<PaddingAtEnd as AsStd140>::Std140Type as TypeLayout>::type_layout()"

---
name: Std140PaddingAtEnd
size: 20
alignment: 4
fields:
  - Field:
      name: _base_value_align
      ty: "[u8 ; Std140PaddingAtEndAlignment :: _base_value_align()]"
      size: 0
  - Field:
      name: base_value
      ty: "< PrimitiveF32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 8
  - Field:
      name: _small_field_align
      ty: "[u8 ; Std140PaddingAtEndAlignment :: _small_field_align()]"
      size: 8
  - Field:
      name: small_field
      ty: "< f32 as :: crevice :: std140 :: AsStd140 > :: Std140Type"
      size: 4

